--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "gsap": "^3.4.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-scroll": "^1.8.0",
     "react-transition-group": "^4.4.1",
-    "sass": "^1.26.10"
+    "sass": "^1.26.10",
+    "typewriter-effect": "^2.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
