--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "3.4.1",
     "react-scroll": "^1.8.0",
     "react-transition-group": "^4.4.1",
+    "react-useanimations": "^2.0.5",
     "sass": "^1.26.10",
     "typewriter-effect": "^2.13.1"
   },
